name:                codejam
version:             0.1.0.0
synopsis:            Boilerplate for Google CodeJam
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2015 Sharif Olorin
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Game.CodeJam
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      .
  default-language:    Haskell2010
